...
        onValueChange = { searchQuery = it },
        placeholder = { Text("Try \"Luxor\"", color = Color.Gray) },
        leadingIcon = { Icon(Icons.Default.Search, contentDescription = "Search", tint = Color.Gray) },
        trailingIcon = {
            if (searchQuery.isNotEmpty()) {
                IconButton(
                    modifier = Modifier.testTag("ClearSearchButton"),
                    onClick = {
                    searchQuery = ""
                    onClearSearch()
                    keyboardController?.hide()
                    focusManager.clearFocus()
                }) {
                    Icon(Icons.Default.Clear, contentDescription = "Clear", tint = Color.Gray)
                }
            }
        },
        singleLine = true,
        modifier = Modifier
            .testTag("SearchBar")
            .background(Color(0xFFF5F5F5), shape = RoundedCornerShape(12.dp))
        ,
        colors = TextFieldDefaults.colors(
            focusedContainerColor = Color.Transparent,
            unfocusedContainerColor = Color.Transparent,
            cursorColor = Color.Black,
...
